--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1280px;
+  max-width: 100svw;
   margin: 0 auto;
-  padding: 2rem;
+
   text-align: center;
 }
 #resizing {
@@ -16,8 +16,31 @@
 .border {
   border: 2px solid white;
 }
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.border-light {
+  border: 2px solid rgb(0, 0, 0);
+}
+[id='container-theme'] {
+  position: absolute;
+  top: 1%;
+  right: 1%;
+  width: 40px;
+  height: 40px;
+  background-color: rgb(131, 152, 171);
+  cursor: pointer;
+  border-radius: 50%;
+  transition: all 0.7s ease;
+}
+main.light-mode {
+  background-color: aliceblue;
+  color: black;
+}
+[id='container-theme']:hover {
+  background-color: aliceblue;
+}
+[id='container-theme'] > img {
+  width: 100%;
+  height: 100%;
+}
+.light-mode {
+  color-scheme: light;
 }
